@@ -76,7 +76,7 @@ int iPhone_getScreenHeight();
 int iPhone_getScreenWidth();
 void iPhone_enableOverlay(int state);
 void iPhone_showCursor(int state);
-void iPhone_setMouseCursor(short *buffer, int width, int height, int hotspotX, int hotspotY);
+void iPhone_setMouseCursor(unsigned short *buffer, int width, int height, int hotspotX, int hotspotY);
 
 uint getSizeNextPOT(uint size);
 
